src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+  Id  ,   Contact__r.FirstName  + &quot; &quot; + Contact__r.LastName   ,&quot;_self&quot;)</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dietary_requirements__c</fullName>
        <label>Dietary requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <formula>IF(ISPICKVAL(Contact__r.VIP_status__c, &quot;VIP&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP</label>
        <type>Text</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Attendee_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Status__c</columns>
        <columns>VIP__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AN-{00000000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>